// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar custom 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-circle ant-avatar-image"
  >
    <img
      src="abc.png"
    />
  </span>
</div>
`;

exports[`Avatar default 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-circle ant-avatar-image"
  >
    <img
      src="test-file-stub"
    />
  </span>
</div>
`;
